Migrating getAllEmployees to a non JPA record
