# src/main/java/com/ninjaone/dundie_awards/controller/IndexController.java
@@ -1,9 +1,9 @@
 package com.ninjaone.dundie_awards.controller;
 
-import com.ninjaone.dundie_awards.organization.AwardsCache;
-import com.ninjaone.dundie_awards.activity.MessageBroker;
-import com.ninjaone.dundie_awards.employee.EmployeeRepository;
 import com.ninjaone.dundie_awards.activity.ActivityRepository;
+import com.ninjaone.dundie_awards.activity.MessageBroker;
+import com.ninjaone.dundie_awards.employee.EmployeeService;
+import com.ninjaone.dundie_awards.organization.AwardsCache;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 public class IndexController {
 
     @Autowired
-    private EmployeeRepository employeeRepository;
+    private EmployeeService employeeService;
 
     @Autowired
     private ActivityRepository activityRepository;
@@ -29,7 +29,7 @@ public class IndexController {
 
     @GetMapping()
     public String getIndex(Model model) {
-        model.addAttribute("employees", employeeRepository.findAll());
+        model.addAttribute("employees", employeeService.getAllEmployees());
         model.addAttribute("activities", activityRepository.findAll());
         model.addAttribute("queueMessages", messageBroker.getMessages());
         model.addAttribute("totalDundieAwards", awardsCache.getTotalAwards());
